# simple-wkd

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  astro.config.mjs  docker-compose.yml  entrypoint.sh  example.config.toml  example.policy.toml  package.json  pnpm-lock.yaml  simple-wkd.code-workspace  tailwind.config.cjs  wkd.toml.example
.github/workflows/: docker.yml
assets/: mail-template.html
assets/webpage/: index.html
assets/webpage/_astro/: delete.4b1c40a3.css  delete.6228aab6.css  delete.cae7b1eb.css  delete.f34bd3df.css
assets/webpage/delete/: index.html
assets/webpage/status/: index.html
assets/webpage/submit/: index.html
assets/webpage/success/: index.html
backend/: .gitignore  Cargo.toml
backend/src/: .gitignore  confirmation.rs  errors.rs  main.rs  management.rs  settings.rs  utils.rs
src/: confirmation.rs  errors.rs  main.rs  management.rs  settings.rs  utils.rs
src/components/: center-xy.astro
src/layouts/: Layout.astro
src/pages/: delete.astro  index.astro  submit.astro  success.astro
src/styles/: global.css
static/: mail-template.html
website/: astro.config.mjs  package.json  pnpm-lock.yaml
website/src/components/: cursor-catcher.astro
website/src/layouts/: Layout.astro
website/src/pages/: status.astro
website/src/styles/: global.css
