[package]
name = "simple-wkd"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.3.1"
chrono = "0.4.24"
flexi_logger = "0.25.3"
lettre = "0.10.4"
log = "0.4.17"
once_cell = "1.17.1"
rand = "0.8.5"
sequoia-net = "0.27.0"
sequoia-openpgp = "1.14.0"
serde = { version = "1.0.160", features = ["derive"] }
serde_json = "1.0.96"
thiserror = "1.0.40"
tokio = { version = "1.27.0", features = ["time"] }
toml = "0.7.3"
url = { version = "2.3.1", features = ["serde"] }
