[package]
name = "simple-wkd"
version = "1.0.0"
edition = "2021"

[dependencies]
actix-files = "0.6.2"
actix-web = { version = "4.3.1", default-features = false, features = ["macros"] }
anyhow = "1.0.70"
chrono = "0.4.24"
flexi_logger = "0.25.3"
lettre = { version = "0.10.4", features = ["tokio1-native-tls"] }
log = "0.4.17"
once_cell = "1.17.1"
rand = "0.8.5"
sequoia-net = "0.27.0"
sequoia-openpgp = { version = "1.14.0", default-features = false, features = ["crypto-openssl"] }
serde = { version = "1.0.160", features = ["derive"] }
thiserror = "1.0.40"
tokio = { version = "1.27.0", features = ["time"] }
toml = "0.7.3"
url = { version = "2.3.1", features = ["serde"] }
